--- a/_sass/minima.scss
+++ b/_sass/minima.scss
@@ -11,8 +11,8 @@ $base-line-height: 1.5 !default;
 $spacing-unit:     30px !default;
 
 $text-color:       #111 !default;
-$background-color: #ff99bb !default;
-$header-color:     #FFEE8C;
+$background-color: #ffbbcc !default;
+$header-color:     #FFfba0;
 $footer-color:     #AAFAEA;
 $brand-color:      #2a7ae2 !default;
 
