category pages + minor changes

--- a/_sass/minima.scss
+++ b/_sass/minima.scss
@@ -13,7 +13,7 @@ $spacing-unit:     30px !default;
 $text-color:       #111 !default;
 $background-color: #ffbbcc !default;
 $header-color:     #FFfba0;
-$footer-color:     #AAFAEA;
+$footer-color:     #BBFCFA;
 $brand-color:      #2a7ae2 !default;
 
 $grey-color:       #828282 !default;
